@@ -550,7 +550,7 @@ ngx_http_php_content_inline_handler(ngx_http_request_t *r)
 		}
 	}
 
-	ctx->request_body_more = 1;
+	//ctx->request_body_more = 1;
 	ngx_http_set_ctx(r, ctx, ngx_http_php_module);
 
 	ngx_php_request = r;
@@ -1551,6 +1551,110 @@ ngx_http_php_content_thread_file_handler(ngx_http_request_t *r)
 
 	return NGX_OK;
 }
+
+
+ngx_int_t 
+ngx_http_php_log_handler(ngx_http_request_t *r)
+{
+	ngx_http_php_loc_conf_t *plcf;
+	plcf = ngx_http_get_module_loc_conf(r, ngx_http_php_module);
+	if (plcf->log_handler == NULL){
+		return NGX_DECLINED;
+	}
+	return plcf->log_handler(r);
+}
+
+ngx_int_t 
+ngx_http_php_log_file_handler(ngx_http_request_t *r)
+{
+	TSRMLS_FETCH();
+
+	ngx_http_php_main_conf_t *pmcf = ngx_http_get_module_main_conf(r, ngx_http_php_module);
+	ngx_http_php_loc_conf_t *plcf = ngx_http_get_module_loc_conf(r, ngx_http_php_module);
+	ngx_http_php_ctx_t *ctx = ngx_http_get_module_ctx(r, ngx_http_php_module);
+
+	if (ctx == NULL){
+		ctx = ngx_pcalloc(r->pool, sizeof(*ctx));
+		if (ctx == NULL){
+			return NGX_ERROR;
+		}
+	}
+	ngx_http_set_ctx(r, ctx, ngx_http_php_module);
+
+	ngx_php_request = r;
+
+	if (r->method == NGX_HTTP_POST){
+		return ngx_http_php_content_post_handler(r);
+	}
+
+	NGX_HTTP_PHP_NGX_INIT;
+		// main init
+		if (pmcf->init_inline_code != NGX_CONF_UNSET_PTR){
+			ngx_php_ngx_run(r, pmcf->state, pmcf->init_inline_code);
+		}
+		if (pmcf->init_code != NGX_CONF_UNSET_PTR){
+			ngx_php_ngx_run(r, pmcf->state, pmcf->init_code);
+		}
+		
+		// location log
+		ngx_php_ngx_run(r, pmcf->state, plcf->log_code);
+	NGX_HTTP_PHP_NGX_SHUTDOWN;
+	
+	ctx = ngx_http_get_module_ctx(r, ngx_http_php_module);
+
+	ngx_http_set_ctx(r, NULL, ngx_http_php_module);
+
+	return NGX_OK;
+}
+
+ngx_int_t 
+ngx_http_php_log_inline_handler(ngx_http_request_t *r)
+{
+	TSRMLS_FETCH();
+
+	ngx_http_php_main_conf_t *pmcf = ngx_http_get_module_main_conf(r, ngx_http_php_module);
+	ngx_http_php_loc_conf_t *plcf = ngx_http_get_module_loc_conf(r, ngx_http_php_module);
+
+	ngx_http_php_ctx_t *ctx;
+	ctx = ngx_http_get_module_ctx(r, ngx_http_php_module);
+
+	if (ctx == NULL){
+		ctx = ngx_pcalloc(r->pool, sizeof(*ctx));
+		if (ctx == NULL){
+			return NGX_ERROR;
+		}
+	}
+
+	ngx_http_set_ctx(r, ctx, ngx_http_php_module);
+
+	ngx_php_request = r;
+
+	if (r->method == NGX_HTTP_POST){
+		return ngx_http_php_content_post_handler(r);
+	}
+
+	//ngx_log_error(NGX_LOG_ERR, r->connection->log, 0, " %s", plcf->log_inline_code->code.string);
+
+	NGX_HTTP_PHP_NGX_INIT;
+		// main init
+		if (pmcf->init_inline_code != NGX_CONF_UNSET_PTR){
+			ngx_php_ngx_run(r, pmcf->state, pmcf->init_inline_code);
+		}
+		if (pmcf->init_code != NGX_CONF_UNSET_PTR){
+			ngx_php_ngx_run(r, pmcf->state, pmcf->init_code);
+		}
+		
+		// location log
+		ngx_php_ngx_run(r, pmcf->state, plcf->log_inline_code);
+	NGX_HTTP_PHP_NGX_SHUTDOWN;
+	
+	ctx = ngx_http_get_module_ctx(r, ngx_http_php_module);
+
+	ngx_http_set_ctx(r, NULL, ngx_http_php_module);
+
+	return NGX_OK;
+}
+
 
 ngx_int_t 
 ngx_http_php_set_inline_handler(ngx_http_request_t *r, ngx_str_t *val, ngx_http_variable_value_t *v, void *data)
