@@ -42,6 +42,10 @@ void *ngx_http_php_sync_inline_thread(void *arg);
 ngx_int_t ngx_http_php_content_thread_file_handler(ngx_http_request_t *r);
 void *ngx_http_php_sync_file_thread(void *arg);
 
+ngx_int_t ngx_http_php_log_handler(ngx_http_request_t *r);
+ngx_int_t ngx_http_php_log_file_handler(ngx_http_request_t *r);
+ngx_int_t ngx_http_php_log_inline_handler(ngx_http_request_t *r);
+
 ngx_int_t ngx_http_php_set_inline_handler(ngx_http_request_t *r, ngx_str_t *val, ngx_http_variable_value_t *v, void *data);
 ngx_int_t ngx_http_php_set_run_inline_handler(ngx_http_request_t *r, ngx_str_t *val, ngx_http_variable_value_t *v, void *data);
 ngx_int_t ngx_http_php_set_file_handler(ngx_http_request_t *r, ngx_str_t *val, ngx_http_variable_value_t *v, void *data);
