@@ -1,7 +1,9 @@
 2017-01-30 rryqszq4 <ngxphp@gmail.com>
 	* dev code "ngx_http_php_output.h", "ngx_http_php_output.c"
-	
 
+	* add nginx directive "log_by_php", "log_by_php_file"
+	
+	
 2016-11-09 rryqszq4 <ngxphp@gmail.com>
 	* fixd ngx_socket_tcp receive complete
 
